# GAS

0x64b/: Makefile
0x64b/factorial_iterative/: Makefile  hellomain.s  hellomain_no_bp_frame.s
0x64b/factorial_recursive/: hellomain.s  hellomain_no_bp_frame.s
0x64b/helloworld/: CMakeLists.txt  Makefile  hellomain.s  hellomain_no_bp_frame.s  main.s
helloworld/: Makefile  main.c  main.s
x64b/: CMakeLists.txt
x64b/division_test/: CMakeLists.txt  division_bytes.S  division_c.c  division_words.S  gdb.cnf
x64b/factorial_iterative/: CMakeLists.txt  hellomain.s  hellomain_no_bp_frame.s
x64b/factorial_recursive/: CMakeLists.txt
x64b/helloworld/: CMakeLists.txt  hellomain_no_bp_frame.s  sample.c
x86/: CMakeLists.txt  Makefile
x86/division_test/: CMakeLists.txt  Makefile  division_bytes.S  division_words.S  gd_debug.sh  gdb.cnf  hellomain.s
x86/factorial_iterative/: Makefile  hellomain.s  hellomain_no_bp_frame.s
x86/factorial_iterative/src/: hellomain.s
x86/factorial_recursive/: CMakeLists.txt  Makefile  hellomain.s  hellomain_no_bp_frame.s
x86/helloworld/: CMakeLists.txt  Makefile  hellomain.s  hellomain_no_bp_frame_stderr.s  sample.c
x86/helloworld/src/: asmvol.c  hellomain.s
x86/loader/: Makefile  ldkern.c  loader.S
